--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,18 +32,19 @@ pipeline {
                 sh 'npm run build'
             }
         }
-         stage('Static Code Analysis') {
-            environment {
-                SONAR_URL = "http://34.201.116.83:9000"
-            }
-            steps {
-                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                sh "${SONARQUBE_SCANNER_HOME}/bin/sonar-scanner \
-                        -Dsonar.host.url=http://your-sonarqube-server \
-                        -Dsonar.login=your-sonarqube-token"
-                }
-            }
-        }
+        // DISABLED THE SONARQUBE SERVER DUE TO AWS FREE_TIER NOT ABLE TO HANDLE THE SONARQUBE SERVER
+        //  stage('Static Code Analysis') {
+        //     environment {
+        //         SONAR_URL = "http://34.201.116.83:9000"
+        //     }
+        //     steps {
+        //         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+        //         sh "${SONARQUBE_SCANNER_HOME}/bin/sonar-scanner \
+        //                 -Dsonar.host.url=http://your-sonarqube-server \
+        //                 -Dsonar.login=your-sonarqube-token"
+        //         }
+        //     }
+        // }
         stage('Build and Push Docker Image') {
             environment {
                 DOCKER_iMAGE = "amangupta677/node-app:${BUILD_NUMBER}"
