--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,18 +1,18 @@
 pipeline {
-    agent any 
+    agent {
+        docker {
+            image 'amangupta677/node-app:latest'
+            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+        }
+    }
+    environment {
+        DOCKER_IMAGE = "amangupta677/node-app:${env.BUILD_NUMBER}"
+    }
     stages {
         stage('Checkout') {
             steps {
                 sh 'echo passed'
                 git branch: 'main', url: 'https://github.com/AmanGupta677/node-docker.git'
-            }
-        }
-        stage('Build') {
-            agent {
-                docker {
-                image 'amangupta677/node-app:latest'
-                args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-                }
             }
         }
         stage('Install dependencies') {
@@ -50,20 +50,19 @@ pipeline {
         // }
         stage('Build and Push Docker Image') {
             environment {
-                DOCKER_iMAGE = "amangupta677/node-app:${BUILD_NUMBER}"
                 REGISTRY_CREDENTIALS = credentials('docker-cred')
             }
             steps {
                 script {
-                    sh 'docker build -t node-app .'
+                    sh 'docker build -t ${DOCKER_IMAGE} .'
                     def dockerImage = docker.image("${DOCKER_IMAGE}")
-                    docker.withRegistry('https://index.io/v/', "docker-cred"){
-                        dockerImage.Push()
+                    docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                        dockerImage.push()
                     }
                 }
             }
         }
-        stage('Update DEployment File') {
+        stage('Update Deployment File') {
             environment {
                 GIT_REPO_NAME = "node-docker"
                 GIT_USER_NAME = "AmanGupta677"
@@ -73,17 +72,16 @@ pipeline {
                     sh '''
                     git config user.email "aman.xyz@gmail.com"
                     git config user.name "Aman Gupta"
-                    BUILD_NUMBER=${BUILD_NUMBER}
                     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" node_docker_manifest/deployment.yml
                     git add node_docker_manifest/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
+                    '''
                 }
             }
         }
     }
-        post {
+    post {
         success {
             // Actions on success
             mail to: 'gaman4941@gmail.com',
